# mkv-renamer

./: Cargo.toml  LICENSE  README.md  TODO.md  movie-sample.conf  qclippy  qclippy-test  qcompile  qcompile-test  qcompile-test-w  qcompile-w  qrun-test  release-local.sh  sample.conf  series-sample.conf
src/: cli.rs  html_scraper.rs  main.rs  metadata_downloader.rs  models.rs  workflow.rs
src/models/: dirs.rs  episodes.rs  errors.rs  movie.rs  series.rs
src/workflow/: common.rs  export_workflow.rs  movie.rs  movie_workflow.rs  rename_workflow.rs  series.rs
src/workflow/movie/: movie_workflow.rs  rename_workflow.rs
src/workflow/series/: export_workflow.rs  rename_workflow.rs  series_workflow.rs
tests/: integration_test.rs
