[package]
name = "mkv-renamer"
version = "0.1.4"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
walkdir = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.2.2", features = ["derive"] }
convert_case = "0.6"
scraper = "0.16.0"
reqwest = "0.11"
tokio = { version = "1.27.0", features = ["full"] }

[dev-dependencies]
pretty_assertions = "1"
