[package]
name = "mkv-renamer"
version = "0.5.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
walkdir = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.5.7", features = ["derive"] }
scraper = "0.19"
reqwest = "0.12"
tokio = { version = "1.38.0", features = ["full"] }
console = "0.15"

[dev-dependencies]
pretty_assertions = "1"
